# pcospot-ai

./: .gitignore  pyproject.toml
src/: main.py
src/controllers/: search.py  sprint.py  summarize.py
src/services/: generateSprint.py  sprint.py  summarizeChat.py  vectorSearch.py
src/utils/: db.py
tests/: embedding.py
